gaowei update 完成课程03 spring bean 依赖注入错误及以上

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#\u8BFE\u7A0B03\u7684\u6848\u4F8B1\uFF0C\u60C5\u51B5\uFF1A
 
+
+username=admin
+password=pass
+
+
+user.name1=admin
+user.password1=pass
