--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.0.15.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
