--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.0.15.Final</version>
+            <version>7.0.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -66,7 +66,20 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <!-- class09 e2 -->
+
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <debug>false</debug>-->
+<!--                    <parameters>false</parameters>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
         </plugins>
+
     </build>
 
 </project>
