gaowei update 课程16

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ password=pass
 
 user.name1=admin
 user.password1=pass
+
+#class 16
+
+spring.web.resources.add-mappings=false
+spring.mvc.throwExceptionIfNoHandlerFound=true
