--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,16 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-
+<!-- Class 15 -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash; Class 15 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
 <!--        </dependency>-->
     </dependencies>
 
