gaowei update 课程20 代码需要调整

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,10 @@
-
 #class 19
-
 jdbc.driver=com.mysql.cj.jdbc.Driver
-
 jdbc.url=jdbc:mysql://localhost:3306/spring_test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
-
 jdbc.username=root
 jdbc.password=123456
+#class 20
+card.driver=com.mysql.cj.jdbc.Driver
+card.url=jdbc:mysql://localhost:3306/spring_test2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+card.username=root
+card.password=123456
